--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "build": "rollup -c",
     "doc": "esdoc",
     "prepublishOnly": "run-s lint test build doc",
-    "clean": "rimraf .nyc_output coverage dist doc"
+    "clean": "rimraf .nyc_output coverage dist doc",
+    "install": "npm run build"
   },
   "repository": {
     "type": "git",
