--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "doc": "esdoc",
     "prepublishOnly": "run-s lint test build doc",
     "clean": "rimraf .nyc_output coverage dist doc",
-    "install": "npm run build"
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
