--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
   },
   "dependencies": {
     "meaw": "^4.3.0"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   }
 }
